--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MongoURI = mongodb+srv://JordySb:Sb@619916@node-task-mongo.zhcck.mongodb.net
+MongoURI = mongodb+srv://JordyTm:Tm@619916@node-task-mongo.zhcck.mongodb.net
 JWTSecret = thisismysecret
 SENDGRID_API_KEY = SG.5OpCjHmvpRDO7sW_G137feQ.oh16bUS8hQgGTcUUifypap8QcxHKGv0N5TThUt-MkSg
 PORT = 3000
 
 # setgridAPIKey = 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
-# MongoURI = mongodb+srv://JordySb:Sb@619916@node-task-mongo.zhcck.mongodb.net/node-task-mongo?retryWrites=true&w=majority
+# MongoURI = mongodb+srv://JordyTm:Tm@619916@node-task-mongo.zhcck.mongodb.net/node-task-mongo?retryWrites=true&w=majority
