--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-MongoURI = mongodb+srv://JordyTm:Tm@619916@node-task-mongo.zhcck.mongodb.net
-JWTSecret = thisismysecret
-SENDGRID_API_KEY = SG.5OpCjHmvpRDO7sW_G137feQ.oh16bUS8hQgGTcUUifypap8QcxHKGv0N5TThUt-MkSg
-PORT = 3000
+MongoURI=mongodb+srv://JordyTm:Tm@619916@node-task-mongo.zhcck.mongodb.net
+JWTSecret=thisismysecret
+SENDGRID_API_KEY=SG.5OpCjHmvpRDO7sW_G137feQ.oh16bUS8hQgGTcUUifypap8QcxHKGv0N5TThUt-MkSg
 
 # setgridAPIKey = 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
 # MongoURI = mongodb+srv://JordyTm:Tm@619916@node-task-mongo.zhcck.mongodb.net/node-task-mongo?retryWrites=true&w=majority
